--- a/_posts/2025-01-21-first.md
+++ b/_posts/2025-01-21-first.md
@@ -1,6 +1,7 @@
 ---
 layout: single
 title:  "첫 포스팅입니다. 설레네요"
+categories: coding
 ---
 
 # 오늘은 처음 블로그를 만들었어요
@@ -10,3 +11,4 @@ title:  "첫 포스팅입니다. 설레네요"
 
 
 ![doctor]({{site.url}}\images\2025-01-21-first\doctor.png)
+
