게시물 수정

--- a/_posts/2025-01-01-E.md
+++ b/_posts/2025-01-01-E.md
@@ -9,7 +9,7 @@ tag: [BOJ, ETF]
 
 
 
-그러나 일본은행의 ETF 매입 정책에는 몇 가지 문제점이 제기되고 있다. 
+**그러나 일본은행의 ETF 매입 정책에는 몇 가지 문제점이 제기되고 있다. **
 
 첫째, 시장의 가격 발견 기능이 왜곡될 위험이 있다. 중앙은행이 지속적으로 대량의 주식을 매입하면 주가가 실물경제의 펀더멘털과 괴리될 가능성이 커진다. 실제로 일본 주식시장에서는 기업의 실적과 관계없이 주가가 유지되는 현상이 관찰되었으며, 이는 시장 효율성을 저하시킬 수 있다.
 
@@ -17,7 +17,12 @@ tag: [BOJ, ETF]
 
 셋째, 일본은행이 보유한 ETF를 언제, 어떻게 처분할 것인가에 대한 명확한 계획이 부재하다. 일본은행이 보유한 ETF의 규모가 방대해짐에 따라, 만약 이들이 한꺼번에 시장에 풀릴 경우 주가 폭락을 초래할 위험이 있다. 따라서 향후 출구 전략에 대한 불확실성이 시장의 불안 요소로 작용하고 있다.
 
-2023년, 일본은행은 ETF 매입 정책을 종료하겠다고 발표하며 더 이상의 추가 매입을 중단했다. 이는 일본 경제가 점진적으로 회복세를 보이고 있으며, 중앙은행이 금융시장의 정상화를 고려하고 있음을 시사하는 조치로 해석된다. 하지만 일본은행이 이미 보유한 대규모 ETF 자산을 어떻게 처리할 것인지에 대한 구체적인 계획은 여전히 불투명하며, 향후 시장에 미칠 영향이 주목되고 있다.
+2023년, 일본은행은 ETF 매입 정책을 종료하겠다고 발표하며 더 이상의 추가 매입을 중단했다. 이는 일본 경제가 점진적으로 회복세를 보이고 있으며, 중앙은행이 금융시장의 정상화를 고려하고 있음을 시사하는 조치로 해석된다. 매각은 2016년 4월부터 개시가 되었는데, 2025년 여름에 완료될 예정이다.
 
 결과적으로, 일본은행의 ETF 매입 정책은 단기적으로는 시장을 안정시키고 투자 심리를 개선하는 효과를 가져왔지만, 장기적으로는 금융시장 왜곡, 기업 거버넌스 문제, 출구 전략의 불확실성 등 다양한 부작용을 초래할 가능성이 있다. 향후 일본은행이 어떤 방식으로 이 정책을 조정할지에 따라 일본 경제 및 금융시장에 미치는 영향이 달라질 것으로 보인다.
 
+
+
+<참고사이트>
+
+https://www.bloomberg.co.jp/news/articles/2025-02-16/SRNFM7T0AFB400
