--- a/_posts/2025-02-03-M.md
+++ b/_posts/2025-02-03-M.md
@@ -7,6 +7,6 @@ tag: [M&A]
 
  혼다와 닛산의 합병이 무산되었다. 기자회견 상에서는 양 기업이 동등한 위치에서 합병하는 모양새였지만, 실질적으로는 혼다가 부진하던 닛산을 품는 것으로 보는 것이 바람직하다. 특히, 대만의 폭스콘이 닛산에게 접근하였지만, 해외의 기업보다는 같은 일본기업끼리 합치는 것이 일본의 입장에서도 좋아, 혼다와 닛산의 합병은 단순히 기업경영의 측면에서 볼 일은 아닐 것이다. 하지만 그런 혼다와 닛산의 합병은 무산되었다.
 
- 형식상 동등한 위치에서 합병하기 위해서는 새로운 지주회사를 세우고, 그 아래에 혼다와 닛산이 들어가는 형태가 일반적이다. 하지만 위어서 언급했다시피, 실질적으로는 혼다가 닛산을 품어주는 합병이기 때문에, 혼다는 일정수주의 구조개혁을 닛산에게 요구하는, 분명한 상하관계가 존재한다. 하지만 닛산은 이러한 개혁요구에 미적지근한 반응을 보였고, 혼다는 새로운 지주회사를 설립하는 것이 아닌, 닛산을 혼다의 자회사로 하는 합병방식을 제안했다. 그리고 닛산을 이 합병방식에 반대하였고, 결국 합병은 무산되었다.
+ 형식상 동등한 위치에서 합병하기 위해서는 새로운 지주회사를 세우고, 그 아래에 혼다와 닛산이 들어가는 형태가 일반적이다. 하지만 위어서 언급했다시피, 실질적으로는 혼다가 닛산을 품어주는 합병이기 때문에, 혼다는 일정수준의 구조개혁을 닛산에게 요구하는, 분명한 상하관계가 존재한다. 하지만 닛산은 이러한 개혁요구에 미적지근한 반응을 보였고, 혼다는 새로운 지주회사를 설립하는 것이 아닌, 닛산을 혼다의 자회사로 하는 합병방식을 제안했다. 그리고 닛산을 이 합병방식에 반대하였고, 결국 합병은 무산되었다.
 
  언론에서 지적하는 것은 닛산 이사들의 높은 보수이다. 닛산의 경우, 이전 카를로스 전 회장 시절에 임원의 보수가 상당히 고액화되었는데, 혼다의 자회사가 될 경우, 그런 고액보수를 유지할 수 없기 때문이다. 대만의 폭스콘은 혼다와 닛산의 합병 무산 소식을 듣고, 다시 닛산에데 접근하는 모양이다. 닛산의 이사들이 어떤 선택을 할지 계속 지켜봐야 할 것이다.
