게시글 수정

--- a/_posts/2025-01-01-D1.md
+++ b/_posts/2025-01-01-D1.md
@@ -19,3 +19,8 @@ tag: [EDINET]
 
 EDINET : https://disclosure2.edinet-fsa.go.jp/WEEK0010.aspx
 (API에 관해서는 왼쪽의 [トップメニュー]→[操作ガイド等])
+
+파이썬 코드 참고 사이트 : 
+https://qiita.com/XBRLJapan/items/b1e66f79d597df7b6037
+https://note.com/ayu_smartlife/n/n574363c7258b
+https://onto-logy.com/column/2096/
