--- a/_posts/2025-01-02-E2.md
+++ b/_posts/2025-01-02-E2.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "희토류 의존도"
 categories: ECONOMY
-tag: [RAREEARTHELEMENT, CHINA]
+tag: [Economic Security, CHINA]
 ---
 
 2010년 센카쿠 열도에서 중국인 선장이 일본 해경에 체포되는 사건이 있었고, 중국은 이에 대응하여 일본으로의 희토류 수출을 통제하였다. 희토류는 휴대폰, 반도체, 전기차 등에 쓰이는 물질로, 일본은 당시 상당한 양을 중국에 의존하고 있었기 때문에, 일본의 입장에서는 가장 뼈아팠던 조치인 것이다. 일본운 결국 중국인 선장을 풀어주었고, 그렇게 일본은 중국에 대한 희토류 의존 심각성을 깨달았다.  
