--- a/_posts/2025-01-03-E3.md
+++ b/_posts/2025-01-03-E3.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "7광구 개발"
 categories: ECONOMY
-tag: [JDZ, KOREA]
+tag: [Economic Security, KOREA]
 ---
 
 7광구는 제주 남쪽 바다부터 일본 오키나와 해구 직전까지 이어진 대륙붕 해역이다. 유엔 산하 아시아 극동경제개발위원회는 1968년 “세계 최대 석유자원이 묻혀있을 가능성이 있다”는 ‘에머리 보고서’를 발표하면서 관심이 집중되었다. 한국은 박정희 정부가 1970년 6월 해저광물자원개발법을 공포하고 7광구 관할권이 한국에 있다고 선포하였다. 하지만 일본은 즉각 반발하였고, 1974년 일본과의 공동개발을 위한 협정을 맺었고, 1978년 6월 발효됐다. 이후 한일은 1980년부터 1986년, 2002년 총 두 차례에 걸쳐 공동 탐사를 진행했다. 그런데 일본은 2002년 공동 탐사를 마친 뒤 “경제적 가치가 떨어진다”는 이유를 들어 공동 탐사의 중단을 통보했다. 한국 단독으로 탐사를 하려해도, 협정에 ‘양국이 공동으로 시추와 탐사를 수행해야 한다’는 조항이 있기 때문에 한국의 독자 탐사에도 제동이 걸렸다.
