--- a/_posts/2025-02-01-M1.md
+++ b/_posts/2025-02-01-M1.md
@@ -2,7 +2,7 @@
 layout: single
 title:  "일본기업의 부동산 차익"
 categories: MANAGEMENT
-tag: [ACCRUEDREVENUE, REALESTATE, M&A]
+tag: [REALESTATE, M&A]
 ---
 
  최근 해외의 행동주의펀드들이 일본기업을 주목하고 있다. 그 이유는 일본기업이 가지고 있는 부동산 자산 때문이다. 일본기업은 이전부터 많은 부동산 자산을 가지고 있었는데, 최근 일본의 부동산 가격이 상승하자 그 가치가 주목받고 있는 것이다. 특히, 재무제표 상의 부동산가치는 매입했을 당시의 가격으로 계상되어 있기 때문에, 재평가를 하지 않는 이상 현재의 가치가 재무제표에 반영되지 않는다. 행동주의 펀드들은 이런 숨겨진 가치를 놓치지 않은 것이다. 골드만 삭스에 따르면, 부동산이 주요 사업이 아닌 250개 이상의 일본 기업이 최소 25조 엔의 숨은 이익(含み益, 평가차익)을 보유하고 있는 것으로 추정된다. 특히 철도, 건설, 공익사업 등의 기업들이 많은 평가차익을 보유하고 있다고 한다.
